--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,13 @@ h2 {
     margin-bottom: 5px;
 }
 
+h3 {
+    font-size: 20px;
+    text-align: center;
+    color: #C1C1FE;
+    font-family: 'Ysabeau Infant', sans-serif;
+}
+
 .awork { /*Artwork Gradient Text Colors*/
     background: -webkit-linear-gradient(#9d7cd9, #50416b);
     -webkit-background-clip: text;
@@ -65,6 +72,12 @@ h2 {
 p {
     color: #C1C1FE;
     font-family: 'Ysabeau Infant', sans-serif;
+}
+
+.aboutwidth {
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 /* Font Styling End */
