--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,21 @@ body {
 
 header {
     background-color: #232363;
-    width: auto;
-    padding: 3px;
-    text-align: center;
+    width: 100%;
+    text-align: left;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+}
+
+.iconlogo {
+    margin-left: 78%;
+    height: 100px;
+    width: 100px;	
+}
+
+.topmover {
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr;
 }
 
 main {
@@ -31,7 +42,10 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 100px;
-    margin: 15px;
+    margin: 0px;
+    margin-left: -10%;
+    margin-bottom: -1%;
+    margin-top: 1%;
 }
 
 h2 {
@@ -396,12 +410,25 @@ input[type=submit]:hover {
     padding: 25px 15px 15px;
     width: 100%;
     height: auto;
-    font-family: 'Raleway', sans-serif;
-    font-size: 16px;
-    color: white;
+    color: #C1C1FE;
+    font-family: 'Ysabeau Infant', sans-serif;
+    font-size: 32px;
     opacity: 0;
     background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255 ,255 , 0) 100%);
     transition: .3s;
+}
+
+
+@media screen and (max-width: 960px) {
+  .gallerycaption {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .gallerycaption {
+    font-size: 12px;
+  }
 }
 
 .gallery-link {
@@ -444,12 +471,16 @@ input[type=submit]:hover {
 .parentimage .childimage:hover {
     filter: grayscale(0);
     transform: scale(1.1);
-    z-index: -100;
 }
 
 .parentimage .childimage:hover ~ .gallerycaption {
     opacity: 1;
 }
+
+.gallerycaption:hover {
+    opacity: 1;
+}
+
 
 /* Gallery Layout End */
 
